--- a/.gitignore
+++ b/.gitignore
@@ -127,5 +127,12 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Project specific
 *.csv
-*.json
+*.db
+*.sqlite
+backend/app/database.db
+
+# Allow PWA files
+!manifest.json
